--- a/main.css
+++ b/main.css
@@ -1,5 +1,4 @@
 body{
-	background:#121212;
 	font:1em Trebuchet MS;
 	word-spacing:2px;
 	color:#7c7c7c;
@@ -14,6 +13,7 @@ body{
 
 #sidebar {
 	width:250px;
+	height:620px;
 	float:left;
 	padding:20px 20px 50px 20px;
 	border-right:5px solid #333;
@@ -48,6 +48,8 @@ ol li{
 
 
 #footer {
+	width: 1860px;
+	height:12px;
 	padding:30px;
 	text-align:center;
 	background:#000;
